Cambios hero: estructura HTML, img/vitrina, estilos CSS

--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@
         <div class="quad bottom-right"></div>
     </div> 
 
+    <div class="hero-main">
+    <!-- Tu headline y search-box aquí -->
+
+    <!-- Destacados: montaje de 5 tarjetas -->
+    <div class="featured-grid">
+      <a href="/casas"       class="card card-2">
+        <span class="label">Casas</span>
+        <span class="price">$550.000.000</span>
+      </a>
+      <a href="/apartamentos" class="card card-3">
+        <span class="label">Apartamentos</span>
+        <span class="price">$420.000.000</span>
+      </a>
+      <a href="/motos"        class="card card-4">
+        <span class="label">Motos</span>
+        <span class="price">$25.000.000</span>
+      </a>
+      <a href="/vehiculos"    class="card card-5">
+        <span class="label">Carros</span>
+        <span class="price">$220.000.000</span>
+      </a>
+    </div>
+
+  </div>
+
     <!-- HEADLINE -->
     <div class="hero-headline">
       <span id="typewriter"></span>
