--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- NAV -->
   <header>
     <div class="logo-area">
-      <img src="/img/logo-vitriz.svg" alt="vitriz Logo" class="logo-img" />
+      <img src="./img/logo-vitriz.svg" alt="vitriz Logo" class="logo-img" />
     </div>
     <nav class="main-nav">
       <ul class="nav-menu">
