index con nueva section

--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
       </header>
   </div>
 
-  
-
-  <!-- HERO -->
+    <!-- HERO -->
   <section id="main-section" role="banner" aria-labelledby="hero-headline">    
     <aside class="hero-aside" aria-labelledby="hero-aside-title">        
         <svg class="grid-bg" xmlns="http://www.w3.org/2000/svg">
@@ -655,7 +653,7 @@
       </div>
     </div>
   </section>
-
+<section></section>
 </body>
 </html>
 
